update to readme

--- a/readme.org
+++ b/readme.org
@@ -49,12 +49,13 @@
 
 #+RESULTS:
 | [[file:dhcp-bootp-fields.lisp]]  |
-| [[file:dhcp-clos.lisp]]          |
-| [[file:dhcp-dehydrate.lisp]]     |
-| [[file:dhcp-hydrate.lisp]]       |
+| [[file:dhcp-client.lisp]]        |
+| [[file:dhcp-common.lisp]]        |
 | [[file:dhcp-options-table.lisp]] |
+| [[file:dhcp-package.lisp]]       |
 | [[file:dhcp-server.lisp]]        |
-| [[file:package.lisp]]            |
+| [[file:dhcptest-package.lisp]]   |
+| [[file:dhcp-ut.lisp]]            |
 | [[file:parse-dhcp-options.lisp]] |
 
 
